# pipecat-esp32

./: .gitignore  README.md  bot.py  detect.py  detect_phone.py  fruit_inventory_tools.py  hw.cpp  live_tracking_complex.json  live_tracking_simple.json  output_live_photos.json  pyproject.toml  requirements.txt  tools.py
photos_out/: detections.csv  detections.json
